--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-openai==1.69.0
-tiktoken==0.9.0
-rich==13.9.4
-prompt-toolkit==3.0.50
+# requirements.txt                                                                                                         
+openai>=1.0                                                                                                                
+python-dotenv                                                                                                              
+rich                                                                                                                       
+prompt-toolkit                                                                                                             
+tiktoken
